# curs_3d

./: CMakeLists.txt  draw_scene.cpp  draw_scene.h  main.cpp  model.h  parse_model.cpp  parse_model.h  point.h  util.cpp  util.h
conf/: data.txt
